<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="election_information">Election Information:</string>
    <string name="unsave_election">Unsave Election</string>
    <string name="save_election">Save Election</string>
    <string name="no_data">No saved elections</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="permission_denied_explanation">In order to use your location it is necessary to grand location permission</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to get the location</string>
    <string name="no_location_avaiable">No Location available yet</string>
    <string name="fill_address_line_1">Fill Address Line 1</string>
    <string name="fill_city">Fill City</string>
    <string name="fill_zip_code">Fill Zip Code</string>
    <string name="select_state">Select State</string>

</resources>
