<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.allexandresantos.politicalpreparedness.election.ElectionsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.allexandresantos.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/upcomingElectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextHeader"
            android:clipToPadding="false"
            tools:itemCount="8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginStart="@dimen/dimen8"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_marginEnd="@dimen/dimen8"
            android:text="@string/upcoming_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcomingElectionsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            tools:itemCount="8"
            android:layout_marginStart="@dimen/dimen8"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_marginEnd="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen16"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/upcomingElectionHeader" />

        <TextView
            android:id="@+id/savedElectionsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextHeader"
            android:layout_marginStart="@dimen/dimen8"
            android:layout_marginEnd="@dimen/dimen8"
            android:text="@string/saved_elections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedElectionsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen8"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_marginEnd="@dimen/dimen8"
            android:layout_marginBottom="@dimen/dimen16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/savedElectionsHeader"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>


        <TextView
            android:id="@+id/noDataTextView"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.showNoData}"
            android:gravity="center"
            android:text="@string/no_data"
            app:drawableTopCompat="@drawable/ic_no_data"
            app:layout_constraintBottom_toBottomOf="@+id/savedElectionsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/savedElectionsRecyclerView" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeVisible="@{viewModel.showLoading}"
            android:gravity="center"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/upcomingElectionsRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upcomingElectionsRecyclerView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>